2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sysdep.h (PTR_MANGLE): Remove
	the `q' suffix from xor/rol instructions.  Use $2*LP_SIZE+1
	instead of $17.
	(PTR_DEMANGLE): Likewise.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/sysdep.h (LP_SIZE): New macro.
	(LP_OP): Likewise.
	(ASM_ADDR): Likewise.
	(RAX_LP): Likewise.
	(RBP_LP): Likewise.
	(RBX_LP): Likewise.
	(RCX_LP): Likewise.
	(RDI_LP): Likewise.
	(RSI_LP): Likewise.
	(RSP_LP): Likewise.
	(R8_LP): Likewise.
	(R9_LP): Likewise.
	(R10_LP): Likewise.
	(R10_LP): Likewise.
	(R11_LP): Likewise.
	(R12_LP): Likewise.
	(R13_LP): Likewise.
	(R14_LP): Likewise.
	(R15_LP): Likewise.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/x32/dl-machine.h: New file.

2012-05-14  Andreas Jaeger  <aj@suse.de>

	* manual/Makefile (subdir): Remove export of subdir.
	(all): Remove target.
	(.PHONY): Remove all from list.
	(mkinstalldirs): Remove.
	(.PHONY): Remove installdirs from list.
	($(inst_infodir)/libc.info): Use make-target-directory.
	(installdirs): Remove.
	(subdir_%): Remove.
	(glibc-targets): Remove.
	(lib): Remove.
	(stubs): Remove.
	($(objpfx)stubs ../po/manual.pot): Remove.
	($(objpfx)stamp%): Remove.
	(make-target-directory): Remove.
	(subdir_install): Remove.
	(routines): Remove.
	(aux): Remove.
	(sources): Remove.
	(objects): Remove.
	(headers): Remove.

	[BZ #13750]
	* manual/.gitignore: Remove, it's not needed anymore.
	* manual/libc-texinfo.sh: Pass OUTDIR as extra argument, create
	all files in it.
	* manual/Makefile (dvi, pdf, info, html): Depend on files in build
	directory.
	(texis): Renamed to $(objpfx)texis.
	(texis-path): New, contains path to generated files.
	(chapters.%): Use texis-path for complete path, add extra argument
	libc-texinfo.sh.
	(libc.dvi, libc.pdf, libc.info, libc.pdf): Add $(objfpx) as prefix.
	(libc/index.html, summary.texi): Add $(objpfx) as prefix.
	(summary,texi, stamp-summary): Use complete path of